/**
 * This file is automatically generated
 * DO NOT EDIT manually
 * Run "node ace migration:run" command to re-generate this file
 */

import { BaseModel, column } from '@adonisjs/lucid/orm'
import { DateTime } from 'luxon'

export class BrandSchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'logoUrl', 'name', 'updatedAt'] as const
  $columns = BrandSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare logoUrl: string
  @column()
  declare name: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class CategorySchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'name', 'updatedAt'] as const
  $columns = CategorySchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare name: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class ProductSchema extends BaseModel {
  static $columns = ['brandId', 'categoryId', 'createdAt', 'id', 'imageUrl', 'name', 'price', 'stock', 'updatedAt'] as const
  $columns = ProductSchema.$columns
  @column()
  declare brandId: number | null
  @column()
  declare categoryId: number | null
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare imageUrl: string | null
  @column()
  declare name: string
  @column()
  declare price: number
  @column()
  declare stock: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class UserSchema extends BaseModel {
  static $columns = ['createdAt', 'email', 'fullName', 'id', 'isAdmin', 'password', 'updatedAt'] as const
  $columns = UserSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare email: string
  @column()
  declare fullName: string | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare isAdmin: boolean
  @column({ serializeAs: null })
  declare password: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}
